Add transformation block for homepage

--- a/rca/project_styleguide/templates/patterns/organisms/programme_tabs/curriculum.html
+++ b/rca/project_styleguide/templates/patterns/organisms/programme_tabs/curriculum.html
@@ -1,5 +1,5 @@
 <section class="section section--start bg bg--dark">
-    {% include "patterns/organisms/image-video-block/image-video-block.html" with modal=True curriculum=True %}
+    {% include "patterns/organisms/image-video-block/image-video-block.html" with modal=True curriculum=True image=page.curriculum_image %}
 </section>
 
 <section class="section section--end bg bg--light">
