--- a/rca/project_styleguide/templates/patterns/molecules/card/card--square.html
+++ b/rca/project_styleguide/templates/patterns/molecules/card/card--square.html
@@ -1,8 +1,8 @@
 {% load wagtailcore_tags wagtailimages_tags %}
 <div class="card card--square {% if item.image %}card--image{% endif %} {% if item.person %}card--person{% endif %}">
     {% if item.image %}
-        {% image card.image fill-80x80 as image_small %}
-        {% image card.image fill-554x554 as image_large %}
+        {% image item.image fill-80x80 as image_small %}
+        {% image item.image fill-554x554 as image_large %}
     {% endif %}
     <div class="card__container">
         {% if item.link %}<a href="{{ item.link }}" class="card__image-container" aria-label="{{ item.title }}">{% endif %}
@@ -16,7 +16,7 @@
                         {{ item.title }}
                     {% if item.link %}</a>{% endif %}
                 </h3>
-                <div class="card__description">{{ item.description }}</div>
+                <div class="card__description">{{ item.summary }}</div>
             </div>
             {% if item.person %}
                 <div class="card__person">
