--- a/rca/project_styleguide/templates/patterns/organisms/carousel/carousel--square.html
+++ b/rca/project_styleguide/templates/patterns/organisms/carousel/carousel--square.html
@@ -2,9 +2,11 @@
     <div data-glide-el="track" class="carousel__container glide__track">
         <ul class="carousel__slides glide__slides" aria-live="polite">
             {% for slide in carousel %}
-            <li class="carousel__item glide__slide">
-                {% include 'patterns/molecules/card/card--square.html' with item=slide %}
-            </li>
+                {% with slide=slide.value %}
+                    <li class="carousel__item glide__slide">
+                        {% include 'patterns/molecules/card/card--square.html' with item=slide %}
+                    </li>
+                {% endwith %}
             {% endfor %}
         </ul>
         <div class="carousel__controls-group grid" data-glide-el="controls">
@@ -23,7 +25,9 @@
     <div class="carousel__controls">
         <div class="carousel__bullet-container" data-glide-el="controls[nav]">
             {% for slide in carousel %}
-                <button class="carousel__bullet" data-glide-dir="={{ forloop.counter }}" aria-label="Slide {{ forloop.counter }}"></button>
+                {% with slide=slide.value %}
+                    <button class="carousel__bullet" data-glide-dir="={{ forloop.counter }}" aria-label="Slide {{ forloop.counter }}"></button>
+                {% endwith %}
             {% endfor %}
         </div>
     </div>
