--- a/rca/project_styleguide/templates/patterns/molecules/tab-nav/tab-nav.html
+++ b/rca/project_styleguide/templates/patterns/molecules/tab-nav/tab-nav.html
@@ -1,18 +1,14 @@
 <div class="tab-nav {{ modifier }} {% if sticky %}sticky{% endif %}" role="tablist" aria-label="Programme Tabs">
     <div class="tab-nav__layout grid">
-        <ul class="tab-nav__container" role="tablist">
+        <nav class="tab-nav__container" role="tablist" aria-label="Tabs">
             {% for tab in tabs %}
-                <li id="{{ tab.title|slugify }}" class="tab-item js-tab-item {% if forloop.counter == 1 %}active{% endif %}" role="tab" aria-controls="tab-panel-{{ tab.title|slugify }}" aria-selected="true">
-                    <a class="tab-item__link" href="#">{{ tab.title }}</a>
-                </li>
+                <a class="tab-item js-tab-item {% if forloop.counter == 1 %}active{% endif %}" href="#{{ tab.title|slugify }}" role="tab" aria-controls="tab-panel-{{ tab.title|slugify }}" data-tab="{{ tab.title|slugify }}" aria-selected="true">{{ tab.title }}</a>
             {% endfor %}
-            <li class="tab-item" role="tab">
-                <a href="#contact" class="tab-item__link link link--tertiary link--down">
-                    <span class="link__label">Contact us</span>
-                    <svg width="12" height="8" class="link__icon"><use xlink:href="#arrow"></use></svg>
-                </a>
-            </li>
-        </ul>
+            <a href="#contact" class="tab-item link link--tertiary link--down" role="tab">
+                <span class="link__label">Contact us</span>
+                <svg width="12" height="8" class="link__icon"><use xlink:href="#arrow"></use></svg>
+            </a>
+        </nav>
     </div>
 </div>
 <div class="tab-nav__placeholder {{ modifier }}"></div>
