--- a/rca/project_styleguide/templates/patterns/pages/programmes/programme_detail.html
+++ b/rca/project_styleguide/templates/patterns/pages/programmes/programme_detail.html
@@ -1,6 +1,8 @@
 {% extends "patterns/base_page.html" %}
 {% load wagtailcore_tags wagtailimages_tags static %}
-
+{% block header_class %}
+    theme-{{ hero_colour }}
+{% endblock %}
 {% block content %}
 
     {% include "patterns/molecules/hero/hero.html" with modifier="programme" %}
@@ -18,7 +20,7 @@
                         {% include "patterns/molecules/breadcrumb/breadcrumb.html" %}
                     </nav>
                     <h1 class="title-area__header heading heading--display-two">{{ page.title }}</h1>
-                    <p class="title-area__introduction introduction">{{page.degree_level}}</p>
+                    <p class="title-area__introduction introduction">{{ page.degree_level }}</p>
                 </div>
             </div>
         </header>
