Adding image-right class to apply image

--- a/rca/project_styleguide/templates/patterns/organisms/programme_tabs/apply.html
+++ b/rca/project_styleguide/templates/patterns/organisms/programme_tabs/apply.html
@@ -5,7 +5,7 @@
     <div class="section__content">
 
         <div class="section__row grid">
-            {% include "patterns/atoms/image/image--right.html" with image=page.apply_image %}
+            {% include "patterns/atoms/image/image--right.html" with image=page.apply_image modifier='image--right' %}
         </div>
 
         <div class="section__row">
