--- a/rca/project_styleguide/templates/patterns/pages/home/home_page.html
+++ b/rca/project_styleguide/templates/patterns/pages/home/home_page.html
@@ -6,7 +6,7 @@
 {% endblock %}
 {% block content %}
 
-    {% include "patterns/molecules/hero/hero--home.html" with modifier="home" %}
+    {% include "patterns/molecules/hero/hero--home.html" with modifier="home" scrolldown=true %}
 
     <div class="page page--overlay" id="content">
 
