--- a/rca/project_styleguide/templates/patterns/atoms/scroll/scroll.html
+++ b/rca/project_styleguide/templates/patterns/atoms/scroll/scroll.html
@@ -1,4 +1,4 @@
-<a href="{{ scroll.link }}" class="scroll" aria-label="Scroll down">
-    <div class="scroll__label">{{ scroll.label }}</div>
+<a href="#content" class="scroll" aria-label="Scroll down">
+    <div class="scroll__label">Scroll down</div>
     <svg width="6" height="10" class="scroll__icon"><use xlink:href="#thin-chevron"></use></svg>
 </a>
