Add a modifier if any of the programme gallery slides has an author value

--- a/rca/project_styleguide/templates/patterns/organisms/programme_tabs/programme_overview.html
+++ b/rca/project_styleguide/templates/patterns/organisms/programme_tabs/programme_overview.html
@@ -44,7 +44,7 @@
             </h3>
         </header>
         <div class="section__content">
-            {% include "patterns/organisms/slideshow/slideshow.html" with slideshow=page.programme_gallery  modifier="slideshow--author-info" %}
+            {% include "patterns/organisms/slideshow/slideshow.html" with slideshow=page.programme_gallery  modifier=programme_slideshow_modifier %}
         </div>
     </div>
 
