Fixing height to remove white px line on note9

--- a/rca/static_src/sass/components/_hero-action-pane.scss
+++ b/rca/static_src/sass/components/_hero-action-pane.scss
@@ -5,6 +5,7 @@
     $hero-action-pane-height-medium: 160px;
     position: relative;
     pointer-events: none;
+    height: $hero-action-pane-height-small;
     top: -$hero-action-pane-height-small;
     margin-bottom: -$hero-action-pane-height-small;
     overflow: hidden;
