--- a/rca/project_styleguide/templates/patterns/organisms/programme_tabs/programme_overview.html
+++ b/rca/project_styleguide/templates/patterns/organisms/programme_tabs/programme_overview.html
@@ -67,7 +67,7 @@
 
     {% include "patterns/organisms/facilities/facilities.html" with link=page.facilities_link title='Facilities' introduction=page.facilities_intro link_text="See all college facilities"  body=page.facilities_copy slideshow=page.facilities_gallery  slideshow=page.facilities_gallery %}
 
-    {% include "patterns/organisms/featured-alumni/featured-alumni.html" with title="Our Alumni" introduction=page.notable_alumni_text alumni_links=page.notable_alumni_links %}
+    {% include "patterns/organisms/featured-alumni/featured-alumni.html" with title="Our Alumni" introduction="Alumni from the RCA form an international network of creative individuals who have shaped and continue to shape the culture surrounding all of us." alumni_links=page.notable_alumni_links %}
 
 </section>
 
