--- a/rca/project_styleguide/templates/patterns/pages/programmes/programme_detail.html
+++ b/rca/project_styleguide/templates/patterns/pages/programmes/programme_detail.html
@@ -51,7 +51,7 @@
                 <section class="section bg bg--light">
                     <div class="contact-anchor" id="contact"></div>
                     <div class="section__container">
-                        {% include "patterns/organisms/contact/contact.html" with heading=page.contact_title text=page.contact_text image=page.contact_image link_href=page.contact_link_url link_text=page.contact_link_text %}
+                        {% include "patterns/organisms/contact/contact.html" with heading='Contact us' text="If you want to register your interest about joining the RCA and recieve updates from the RCA and it’s community." image=page.contact_image link_href="https://www.rca.ac.uk/contact-us/" link_text="Register your interest with us here" %}
                     </div>
                 </section>
 
@@ -60,7 +60,7 @@
                         <div class="section__notch-fill section__notch-fill--third-col"></div>
                     </div>
                     <div class="section__container">
-                        {% include "patterns/molecules/relatedcontent/relatedprogrammes.html" with title=page.related_content_title %}
+                        {% include "patterns/molecules/relatedcontent/relatedprogrammes.html" with title="More opportunities to study at the RCA" %}
                     </div>
                 </section>
 
