--- a/rca/project_styleguide/templates/patterns/pages/home/home_page.html
+++ b/rca/project_styleguide/templates/patterns/pages/home/home_page.html
@@ -90,6 +90,7 @@
                     </header>
 
                     <div class="section__content grid">
+                    {{news}}
                         {% include "patterns/organisms/news/news.html" %}
                     </div>
 
