--- a/rca/project_styleguide/templates/patterns/pages/home/home_page.html
+++ b/rca/project_styleguide/templates/patterns/pages/home/home_page.html
@@ -90,8 +90,7 @@
                     </header>
 
                     <div class="section__content grid">
-                    {{news}}
-                        {% include "patterns/organisms/news/news.html" %}
+                        {% include "patterns/organisms/news/news_api_content.html" with news=news_and_events %}
                     </div>
 
                 </div>
