--- a/rca/project_styleguide/templates/patterns/pages/home/home_page.html
+++ b/rca/project_styleguide/templates/patterns/pages/home/home_page.html
@@ -52,7 +52,7 @@
                     </div>
 
                     <div class="alumni-stories__carousel grid">
-                        {% include "patterns/organisms/carousel/carousel.html" with carousel=alumni %}
+                        {% include "patterns/organisms/carousel/carousel_api_content.html" with carousel=alumni_stories %}
                     </div>
                 </div>
 
