Hardcode breadcrumb for time being

--- a/rca/project_styleguide/templates/patterns/molecules/breadcrumb/breadcrumb.html
+++ b/rca/project_styleguide/templates/patterns/molecules/breadcrumb/breadcrumb.html
@@ -1,11 +1,6 @@
 <ul class="breadcrumb">
     <li class="breadcrumb__item">
-        <a class="breadcrumb__item-link" href="#">
-            Degree Programmes
-        </a>
-    </li>
-    <li class="breadcrumb__item">
-        <a class="breadcrumb__item-link" href="#">
+        <a class="breadcrumb__item-link" href="//rca.ac.uk/schools/">
             Degree Programmes
         </a>
     </li>
