--- a/rca/project_styleguide/templates/patterns/molecules/key-details/key-details.html
+++ b/rca/project_styleguide/templates/patterns/molecules/key-details/key-details.html
@@ -42,9 +42,10 @@
         <div class="key-details__section key-details__section--deadline">
             <h4 class="body body--two key-details__sub-heading">Application deadline</h4>
             <ul class="key-details__list">
-                {% if page.application_deadline_options %}
+                {% if page.application_deadline_options == '1' %}
                     <li class="key-details__list-item">{{ page.get_application_deadline_options_display }}</li>
                 {% else %}
+                    <li class="key-details__list-item">{{ page.get_application_deadline_options_display }}</li>
                     <li class="key-details__list-item">{{ page.application_deadline }}</li>
                 {% endif %}
             </ul>
