--- a/rca/project_styleguide/templates/patterns/organisms/featured-alumni/featured-alumni.html
+++ b/rca/project_styleguide/templates/patterns/organisms/featured-alumni/featured-alumni.html
@@ -7,7 +7,7 @@
         <ul class="featured-alumni__list">
             {% for link in alumni_links %}
             {% if link.value.link %}
-                <li><a href="{{ link.value.link }}">{{ link.value.name }}</a></li>
+                <li><a target="_blank" href="{{ link.value.link }}">{{ link.value.name }}</a></li>
             {% else %}
                 <li>{{ link.value.name }}</li>
             {% endif %}
