--- a/rca/project_styleguide/templates/patterns/molecules/steps/steps.html
+++ b/rca/project_styleguide/templates/patterns/molecules/steps/steps.html
@@ -17,7 +17,7 @@
                 </div>
             {% endwith %}
         {% endfor %}
-        <a class="steps__action" href="{{ page.apply_cta_link }}">
+        <a class="steps__action" href="{{ page.apply_cta_link }}" target="_blank">
             <span class="steps__action-label">{{ page.apply_cta_text }}</span>
             <svg width="24" height="16" class="steps__action-icon"><use xlink:href="#arrow"></use></svg>
         </a>
