--- a/rca/static_src/sass/components/_app.scss
+++ b/rca/static_src/sass/components/_app.scss
@@ -1,6 +1,20 @@
 .app {
     $root: &;
 
+    &--404 {
+        background-color: $color--black;
+
+        #{$root}__content {
+            padding-top: 200px;
+
+            @include media-query(medium) {
+                padding-top: 300px;
+            }
+
+        }
+
+    }
+
     &__header {
         @include z-index(header);
         position: fixed;
