--- a/rca/project_styleguide/templates/patterns/pages/wagtail/404.html
+++ b/rca/project_styleguide/templates/patterns/pages/wagtail/404.html
@@ -3,6 +3,8 @@
 
 {% block body_class %}app--404{% endblock %}
 
+{% block title %}{{ settings.utils.SystemMessagesSettings.title_404 }}{% endblock %}
+
 {% block content %}
 
 <div class="page">
