--- a/rca/project_styleguide/templates/patterns/organisms/contact/contact.html
+++ b/rca/project_styleguide/templates/patterns/organisms/contact/contact.html
@@ -9,7 +9,11 @@
             <h2 class="contact__heading heading heading--four">{{ heading }}</h2>
             <p class="contact__text body body--one">{{ text }}</p>
         </div>
-        <a href="{{ link_href }}" class="contact__link link link--primary link--link body body--two" target="_blank" rel="noopener">
+        {% if page.contact_email %}
+            <a href="mailto:{{ page.contact_email }}" class="contact__link link link--primary link--link body body--two" target="_blank" rel="noopener">
+        {% else %}
+            <a href="{{ page.contact_url }}" class="contact__link link link--primary link--link body body--two" target="_blank" rel="noopener">
+        {% endif %}
             {{ link_text }}
             <svg width="12" height="8" class="link__icon"><use xlink:href="#arrow"></use></svg>
         </a>
