--- a/rca/static_src/sass/components/_rich-text.scss
+++ b/rca/static_src/sass/components/_rich-text.scss
@@ -49,6 +49,10 @@
     }
 
     .accordion & {
-        @include font-size(xxs);
+        @include font-size(xs);
+
+        @include media-query(large) {
+            font-size: map-get($medium-font-sizes, xs);
+        }
     }
 }
