--- a/rca/static_src/sass/components/_audience-nav-item.scss
+++ b/rca/static_src/sass/components/_audience-nav-item.scss
@@ -22,7 +22,7 @@
         flex-basis: 100%;
         max-width: 100%;
         min-width: 100%;
-        color: $color--meta;
+        color: $color--meta-lightbg;
         margin-top: 4px;
     }
 
