--- a/rca/static_src/sass/components/_audience-nav-item.scss
+++ b/rca/static_src/sass/components/_audience-nav-item.scss
@@ -77,6 +77,7 @@
     .app--homepage .header & {
         @include media-query(large) {
             opacity: 0;
+            visibility: hidden;
         }
     }
 
@@ -84,6 +85,7 @@
     .app--homepage.show-nav .header & {
         @include media-query(large) {
             opacity: 1;
+            visibility: visible;
         }
     }
 
