--- a/rca/project_styleguide/templates/patterns/organisms/staff-overview/staff-overview.html
+++ b/rca/project_styleguide/templates/patterns/organisms/staff-overview/staff-overview.html
@@ -3,7 +3,7 @@
     {% for item in staff %}
         {% include "patterns/molecules/staff-detail/staff-detail.html" %}
     {% endfor %}
-    <a class="staff-overview__view-all link link--primary link--link body body--two" href="{{ page.staff_link }}">
+    <a class="staff-overview__view-all link link--secondary link--link body body--two" href="{{ page.staff_link }}">
         <span class="link__label">{{ page.staff_link_text }}</span>
         <svg class="link__icon" width="12" height="8"><use xlink:href="#arrow"></use></svg>
     </a>
