--- a/rca/project_styleguide/templates/patterns/organisms/programme_tabs/programme_overview.html
+++ b/rca/project_styleguide/templates/patterns/organisms/programme_tabs/programme_overview.html
@@ -72,22 +72,19 @@
 </section>
 
 <section class="section section--end bg bg--dark">
-
-    <div class="section__notch section__notch--top">
-        <div class="section__notch-fill section__notch-fill--third-col"></div>
-    </div>
-
-    <div class="section__container">
-
-        <header class="section__header grid">
-            <h3 class="section__heading section__heading--primary heading heading--two">News & events</h3>
-        </header>
-
-        <div class="section__content grid">
-            {% include "patterns/organisms/news/news.html" %}
+    {% if news_and_events %}
+        <div class="section__notch section__notch--top">
+            <div class="section__notch-fill section__notch-fill--third-col"></div>
         </div>
-
-    </div>
+        <div class="section__container">
+            <header class="section__header grid">
+                <h3 class="section__heading section__heading--primary heading heading--two">News & events</h3>
+            </header>
+            <div class="section__content grid">
+                {% include "patterns/organisms/news/news_api_content.html" with news=news_and_events %}
+            </div>
+        </div>
+    {% endif %}
 </section>
 
 <section class="section bg bg--light">
