Adjusting stat block bg colour and meta weight

--- a/rca/static_src/sass/components/_stat-block.scss
+++ b/rca/static_src/sass/components/_stat-block.scss
@@ -119,6 +119,8 @@
 
     &__meta {
         margin-bottom: 0;
+        font-family: $font--secondary;
+        font-weight: $weight--medium;
     }
 
     &__body {
