--- a/rca/static_src/sass/components/_stat-block.scss
+++ b/rca/static_src/sass/components/_stat-block.scss
@@ -74,8 +74,14 @@
     }
 
     &__number-container {
+        position: relative;
+        left: -2px;
         display: flex;
         align-items: flex-end;
+
+        @include media-query(medium) {
+            left: -3px;
+        }
     }
 
     &__number {
