--- a/rca/project_styleguide/templates/patterns/organisms/programme_tabs/requirements.html
+++ b/rca/project_styleguide/templates/patterns/organisms/programme_tabs/requirements.html
@@ -1,3 +1,4 @@
+{% load wagtailcore_tags %}
 <section class="section section--start bg bg--dark">
     <div class="section__row programme-overview">
         <header class="section__header grid">
@@ -10,8 +11,7 @@
                     <p class="introduction">
                         What you need to know before you apply
                     </p>
-                    <p>Candidates for all MA programmes are assessed on their existing qualities as demonstrated in their work and in their interview, as well as on their potential to benefit from the programme and to achieve MA standards overall.</p>
-                    <p>The assessment will consider: creativity, imagination and innovation evident in the work; ability to articulate the intentions of the work; intellectual engagement in relevant areas; appropriate technical skills; overall interview performance, including oral use of English.</p>
+                    {{ page.requirements_text|richtext }}
             </div>
         </div>
         {% if page.requirements_blocks %}
