--- a/rca/static_src/sass/abstracts/_variables.scss
+++ b/rca/static_src/sass/abstracts/_variables.scss
@@ -29,13 +29,12 @@ $color--meta-lightbg: $color--dark-grey;
 
 // --------------------------------- Fonts --------------------------------------
 
-$font--primary: 'benton-sans', 'Benton Sans', 'BentonSans', 'Helvetica Neue',
-    Arial, Helvetica, Sans-Serif;
-$font--secondary: 'benton-sans', 'Benton Sans Medium', 'BentonSans-Medium',
-    'Helvetica Neue', Arial, Helvetica, Sans-Serif;
+$font--primary: 'Benton Sans Old', 'Helvetica Neue', Arial, Helvetica, Sans-Serif; // Benton Sans Regular
+$font--secondary: 'Benton Sans Medium', 'Helvetica Neue', Arial, Helvetica, Sans-Serif;
 
 // Font weights
-$weight--medium: 600;
+// Now handled by font family so both 500
+$weight--medium: 500;
 $weight--normal: 500;
 
 // Line heights
