Hardcoded text updates

--- a/rca/project_styleguide/templates/patterns/molecules/key-details/key-details.html
+++ b/rca/project_styleguide/templates/patterns/molecules/key-details/key-details.html
@@ -26,7 +26,7 @@
     {% endif %}
     {% if page.next_open_day_date %}
         <div class="key-details__section key-details__section--open-days">
-            <h4 class="body body--two key-details__sub-heading">Next open days</h4>
+            <h4 class="body body--two key-details__sub-heading">Next open day</h4>
             <ul class="key-details__list">
                 <li class="key-details__list-item">{{ page.next_open_day_date }}</li>
                 <li class="key-details__list-item">
