--- a/rca/project_styleguide/templates/patterns/molecules/pathways/pathways.html
+++ b/rca/project_styleguide/templates/patterns/molecules/pathways/pathways.html
@@ -6,8 +6,8 @@
             {% include "patterns/atoms/pathway-item/pathway-item.html" with path=path.value %}
         {% endfor %}
     </div>
-    <a class="pathways__view-all link link--secondary link--link body body--two" href="#">
-        <span class="link__label">View more pathways information</span>
+    <a class="pathways__view-all link link--secondary link--link body body--two" href="?tab=yes#curriculum">
+        <span class="link__label">Visit the Curriculum tab for more information.</span>
         <svg class="link__icon" width="12" height="8"><use xlink:href="#arrow"></use></svg>
     </a>
 </div>
