--- a/rca/project_styleguide/templates/patterns/organisms/programme_tabs/requirements.html
+++ b/rca/project_styleguide/templates/patterns/organisms/programme_tabs/requirements.html
@@ -3,14 +3,12 @@
     <div class="section__row programme-overview">
         <header class="section__header grid">
             <h2 class="section__heading section__heading--primary heading heading--two">
-                Programme requirements
+                Requirements
             </h2>
         </header>
         <div class="section__content grid">
             <div class="programme-overview__body">
-                    <p class="introduction">
-                        What you need to know before you apply
-                    </p>
+                    <p class="introduction">What you need to know before you apply</p>
                     {{ page.requirements_text|richtext }}
             </div>
         </div>
