--- a/rca/project_styleguide/templates/patterns/atoms/scroll/scroll.html
+++ b/rca/project_styleguide/templates/patterns/atoms/scroll/scroll.html
@@ -1,4 +1,4 @@
 <a href="#content" class="scroll" aria-label="Scroll down">
-    <div class="scroll__label">Scroll down</div>
+    <div class="scroll__label">Scroll</div>
     <svg width="6" height="10" class="scroll__icon"><use xlink:href="#thin-chevron"></use></svg>
 </a>
