--- a/rca/project_styleguide/templates/patterns/molecules/navigation/standoutnav.html
+++ b/rca/project_styleguide/templates/patterns/molecules/navigation/standoutnav.html
@@ -7,13 +7,13 @@
     </li>
     <li>
         <a class="nav__link nav__link--base link link--link" href="#">
-            <span class="link__label">Support Generation RCA</span>
+            <span class="link__label">Support GenerationRCA</span>
             <svg width="12px" height="8px" class="link__icon"><use xlink:href="#arrow"></use></svg>
         </a>
     </li>
     <li>
         <a class="nav__link nav__link--base nav__link--standout link link--link" href="#">
-            <span class="link__label">Log into application portal</span>
+            <span class="link__label">Visit our application portal</span>
             <svg width="12px" height="8px" class="link__icon"><use xlink:href="#arrow"></use></svg>
         </a>
     </li>
