--- a/rca/project_styleguide/templates/patterns/molecules/tab-nav/tab-nav.html
+++ b/rca/project_styleguide/templates/patterns/molecules/tab-nav/tab-nav.html
@@ -5,7 +5,7 @@
                 <a class="tab-item js-tab-item {% if forloop.counter == 1 %}active{% endif %}" href="#{{ tab.title|slugify }}" role="tab" aria-controls="tab-panel-{{ tab.title|slugify }}" data-tab="{{ tab.title|slugify }}" aria-selected="true">{{ tab.title }}</a>
             {% endfor %}
             <a href="#contact" class="tab-item link link--tertiary link--down" role="tab">
-                <span class="link__label">Contact us</span>
+                <span class="link__label">Ask a question</span>
                 <svg width="12" height="8" class="link__icon"><use xlink:href="#arrow"></use></svg>
             </a>
         </nav>
