Video icon for mobile

--- a/rca/static_src/sass/components/_image-caption-link.scss
+++ b/rca/static_src/sass/components/_image-caption-link.scss
@@ -87,6 +87,7 @@
     }
 
     &__image-icon {
+        @include z-index(above-gridlines);
         position: absolute;
         left: 50%;
         top: 50%;
